# esilv-m2-mlops

./: .gitignore  .pre-commit-config.yaml  Dockerfile.inference  Dockerfile.train  README.md  projet_ml_heart_disease.ipynb  pyproject.toml
.github/workflows/: cd.yml  ci.yml
api/: app.py
models/: ann.keras  rf_tuned.joblib  scaler.joblib  svm_tuned.joblib
src/: data.py  logging_config.py  model.py  registry.py  train.py
tests/: conftest.py  test_api.py  test_data.py  test_mlflow.py  test_model.py  test_monitoring.py
