[project]
name = "esilv-m2-mlops"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "shap>=0.51.0",
    "optuna>=4.7.0",
    "scikit-learn>=1.8.0",
    "pandas>=3.0.1",
    "numpy>=2.4.3",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "tensorflow>=2.21.0",
    "keras>=3.13.2",
    "joblib>=1.5.3",
]
