[project]
name = "esilv-m2-mlops"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "shap>=0.51.0",
    "optuna>=4.7.0",
    "scikit-learn>=1.8.0",
    "pandas>=3.0.1",
    "numpy>=2.4.3",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "tensorflow>=2.21.0",
    "keras>=3.13.2",
    "joblib>=1.5.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.0",
    "black>=25.1.0",
    "isort>=6.0.0",
    "mypy>=1.15.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.1.0",
]

# ── Ruff ──────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

# ── Black ─────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py311"]

# ── isort ─────────────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["data", "model"]

# ── mypy ──────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = false

# ── pytest ────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
